WIP: ct : xml --> JSON transformer: Clean up